gc details